add initial RSS feed system with config and server setup
- Create config package with YAML configuration support
- Implement feed package with Manager and HTTPFetcher
- Move server setup to server package with interface-based dependencies
- Add types subpackage to resolve circular dependencies
- Use interfaces defined on consumer side throughout
- Add comprehensive unit tests with high coverage
- Fix all linter issues and normalize comments

The system now supports:
- Loading RSS feeds from config file
- Concurrent feed fetching with timeout support
- Server configuration via YAML
- Clean architecture with proper separation of concerns

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,6 +16,8 @@ linters:
     - staticcheck
     - unconvert
     - unused
+    - testifylint
+    - nestif
   settings:
     goconst:
       min-len: 2
