add llm-based article classification
- implement llm classifier using openai-compatible apis
- support for openai, ollama, and other compatible endpoints
- add configurable system prompts for customization
- implement batch processing for efficient classification
- add feedback-based prompt enhancement for learning user preferences
- support json mode for structured responses
- add classificationconfig as separate struct type
- include comprehensive tests with mock llm responses
- update architecture documentation to reflect new approach

the classifier scores articles from 0-10 based on relevance, provides
explanations, and extracts topic keywords. it learns from user feedback
to improve future classifications.

--- a/config.yml
+++ b/config.yml
@@ -28,6 +28,21 @@ llm:
   max_tokens: 500
   timeout: "30s"
   
+  # Optional: Custom system prompt for classification
+  # system_prompt: |
+  #   You are a tech news curator. Rate articles from 0-10 based on:
+  #   - Relevance to software development and technology
+  #   - Innovation and emerging technologies
+  #   - Practical applications and tutorials
+  #   
+  #   Respond with JSON array containing for each article:
+  #   {
+  #     "guid": "article GUID",
+  #     "score": 0-10,
+  #     "explanation": "brief reason (max 100 chars)",
+  #     "topics": ["topic1", "topic2", "topic3"]
+  #   }
+  
   classification:
     score_threshold: 5.0       # Minimum score to include
     feedback_examples: 10      # Recent examples to include
