integrate llm classifier into scheduler
- add classifier interface and implementation to scheduler
- add classification worker that runs periodically
- implement batch classification with feedback context
- update scheduler config with classify interval
- wire up llm classifier in main application
- update all scheduler tests with classifier mock
- add comprehensive tests for classification functionality

--- a/config.yml
+++ b/config.yml
@@ -15,6 +15,7 @@ database:
 schedule:
   update_interval: 30    # minutes
   extract_interval: 5    # minutes  
+  classify_interval: 10  # minutes
   max_workers: 5
 
 llm:
