fix llm json parsing errors by increasing token limit
- increase max_tokens from 500 to 2000 to accommodate summaries
- add debug logging for llm responses to diagnose truncation issues
- log failed json parsing attempts with response content
- with 5 items and summaries, we need ~750+ tokens minimum

--- a/config.yml
+++ b/config.yml
@@ -26,7 +26,7 @@ llm:
   api_key: "${OPENAI_API_KEY}"  # From environment
   model: "gpt-4o-mini"                # or "gpt-4o-mini"
   temperature: 0.3               # Lower = more consistent
-  max_tokens: 500
+  max_tokens: 2000               # Increased for summaries
   timeout: "30s"
   
   # Optional: Custom system prompt for classification
