remove legacy feeds configuration
- remove Feeds field from Config struct
- remove Feed struct definition and GetFeeds method
- remove feed validation and defaults
- update tests to remove all feed references
- clean up feed.Manager and related mocks (not used in production)
- update config.yml to remove feeds section
- regenerate schema without feeds
- update server mocks to include GetFullConfig method

--- a/config.yml
+++ b/config.yml
@@ -47,7 +47,8 @@ llm:
   classification:
     score_threshold: 5.0       # Minimum score to include
     feedback_examples: 10      # Recent examples to include
-    batch_size: 5             # Articles to classify at once
+    batch_size: 5              # Articles to classify at once
+    use_json_mode: true        # Use JSON mode for classification
 
 extraction:
   enabled: true
@@ -59,15 +60,3 @@ extraction:
   include_images: false
   include_links: false
 
-feeds:
-  - url: "https://news.ycombinator.com/rss"
-    name: "Hacker News"
-    interval: "30m"
-    
-  - url: "https://lobste.rs/rss"
-    name: "Lobsters"  
-    interval: "1h"
-    
-  - url: "https://feeds.feedburner.com/codinghorror"
-    name: "Coding Horror"
-    interval: "2h"
