add topic standardization and preferences to classification system
- send canonical topics list from db to llm for consistent topic naming
- add preferred/avoided topics configuration with score adjustments
- fix GetRecentFeedback to fetch both likes and dislikes when no type specified
- update llm prompt to use canonical topics and apply preferences
- remove unused BatchSize configuration field

--- a/config.yml
+++ b/config.yml
@@ -45,8 +45,16 @@ llm:
   classification:
     score_threshold: 5.0       # Minimum score to include
     feedback_examples: 10      # Recent examples to include
-    batch_size: 5              # Articles to classify at once
     use_json_mode: true        # Use JSON mode for classification
+    preferred_topics:          # Topics that increase article scores
+      - "golang"
+      - "rust" 
+      - "ai"
+      - "security"
+    avoided_topics:            # Topics that decrease article scores
+      - "sports"
+      - "politics"
+      - "celebrity"
 
 extraction:
   enabled: true
