fix critical filtering bug with database-level filtering
- move filtering from application-level to database-level to resolve issue where feed filtering returned incorrect results
- add GetClassifiedItemsWithFilters method with dynamic SQL query building
- add GetActiveFeedNames method with proper SQL aggregation
- update adapters to use database-level filtering instead of application loops
- add comprehensive tests for topic filtering, feed filtering, and combined filtering
- update Radio-T focused topic preferences in config

fixes issue where only 1 dzone article showed at score 0 instead of expected 30

--- a/config.yml
+++ b/config.yml
@@ -46,15 +46,33 @@ llm:
     score_threshold: 5.0       # Minimum score to include
     feedback_examples: 10      # Recent examples to include
     use_json_mode: true        # Use JSON mode for classification
-    preferred_topics:          # Topics that increase article scores
+    preferred_topics:          # Topics that increase article scores based on Radio-T content
       - "golang"
       - "rust" 
       - "ai"
-      - "security"
+      - "machine learning"
+      - "programming"
+      - "software development"
+      - "open source"
+      - "github"
+      - "docker"
+      - "typescript"
+      - "coding"
+      - "tech industry"
+      - "claude"
+      - "openai"
+      - "anthropic"
+      - "llm"
+      - "coding assistants"
+      - "development tools"
+      - "software engineering"
     avoided_topics:            # Topics that decrease article scores
       - "sports"
       - "politics"
       - "celebrity"
+      - "entertainment"
+      - "fashion"
+      - "lifestyle"
     
     # Optional: Custom prompts for preference summary generation
     # prompts:
