add pagination support to articles view
- add page_size configuration option with default 50
- implement offset-based pagination in repository layer
- add pagination metadata to articles response
- create pagination template component with navigation
- update server handlers to support page parameter
- add pagination tests for repository functionality

--- a/config.yml
+++ b/config.yml
@@ -5,6 +5,7 @@ app:
 server:
   listen: ":8080"
   timeout: "30s"
+  page_size: 50              # Articles per page for pagination
 
 database:
   dsn: "./var/newscope.db"
