remove unused score_threshold configuration parameter
- removed ScoreThreshold field from ClassificationConfig struct
- removed validation logic for score threshold ranges
- removed related test cases
- updated config.yml to remove score_threshold: 5.0
- updated documentation in plan.md and ARCHITECTURE.md
- regenerated schema.json

the score_threshold parameter was loaded from config but never actually used
in the application logic. filtering by score happens at display time via
query parameters, not at storage time.

--- a/config.yml
+++ b/config.yml
@@ -23,7 +23,7 @@ llm:
   endpoint: "https://api.openai.com/v1" # OpenAI example
   
   api_key: "${OPENAI_API_KEY}"  # From environment
-  model: "gpt-4o-mini"                # or "gpt-4o-mini"
+  model: "gpt-4.1-nano"                # or "gpt-4o-mini"
   temperature: 0.3               # Lower = more consistent
   max_tokens: 2000               # Increased for summaries
   timeout: "30s"
@@ -44,8 +44,7 @@ llm:
   #   }
   
   classification:
-    score_threshold: 5.0       # Minimum score to include
-    feedback_examples: 10      # Recent examples to include
+    feedback_examples: 50      # Recent examples to include
     use_json_mode: true        # Use JSON mode for classification
     preferred_topics:          # Topics that increase article scores based on Radio-T content
       - "golang"
@@ -57,13 +56,11 @@ llm:
       - "open source"
       - "github"
       - "docker"
-      - "typescript"
       - "coding"
       - "tech industry"
       - "claude"
       - "openai"
       - "anthropic"
-      - "llm"
       - "coding assistants"
       - "development tools"
       - "software engineering"
