add base URL configuration and update settings page
- added base_url to config.yml with default http://localhost:8080
- added BaseURL default in config Load function
- updated RSS handler to use configured BaseURL instead of hardcoded constant
- updated RSS help page handler to use configured BaseURL
- updated RSS handler tests to provide GetFullConfig mock
- enhanced settings page to show:
  - Page Size (articles per page)
  - Base URL for RSS feeds
  - System Prompt status (when configured)
- RSS feeds now use the proper base URL from configuration

--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,7 @@ server:
   listen: ":8080"
   timeout: "30s"
   page_size: 50              # Articles per page for pagination
+  base_url: "http://localhost:8080"  # Base URL for RSS feeds and external links
 
 database:
   dsn: "./var/newscope.db"
