make preference summary threshold configurable and add debouncing
- add PreferenceSummaryThreshold to ClassificationConfig (default: 25)
- implement dedicated preferenceUpdateWorker with 5-minute debouncing
- replace direct UpdatePreferenceSummary calls with TriggerPreferenceUpdate
- prevent concurrent preference updates and batch multiple triggers
- update documentation to reflect configurable threshold and debouncing
- add comprehensive tests for new functionality

--- a/config.yml
+++ b/config.yml
@@ -47,6 +47,7 @@ llm:
   classification:
     feedback_examples: 50      # Recent examples to include
     use_json_mode: true        # Use JSON mode for classification
+    preference_summary_threshold: 25  # Number of new feedbacks before updating preference summary
     preferred_topics:          # Topics that increase article scores based on Radio-T content
       - "golang"
       - "rust" 
