fix config.yml to use duration strings instead of integers
- change update_interval from 30 to '30m'
- add cleanup configuration with proper duration strings
- add comments explaining duration format

--- a/config.yml
+++ b/config.yml
@@ -15,8 +15,11 @@ database:
   conn_max_lifetime: 3600
 
 schedule:
-  update_interval: 30    # minutes
+  update_interval: "30m"    # Feed update interval (duration format: 30m, 1h, etc.)
   max_workers: 20
+  cleanup_age: "168h"       # Maximum age for low-score articles (default: 1 week)
+  cleanup_min_score: 5.0    # Minimum score to keep articles regardless of age
+  cleanup_interval: "24h"   # How often to run cleanup (default: daily)
 
 llm:
   # OpenAI-compatible endpoint (OpenAI, Ollama, etc)
